network-policy/np-allow-from-left-namespace-specific-pod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-left-namespace-specific-pod
spec:
  podSelector: 
    matchLabels: 
      deployment: richard
  policyTypes:
  - Ingress 
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          projectName: left
      podSelector:
        matchLabels:
          deployment: mark
